// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-strike stories withOverrideStyle 1`] = `
<amplify-strike class="amplify-ui--strike">
  <mock:shadow-root>
    <span class="amplify-ui--strike">
      <slot></slot>
    </span>
  </mock:shadow-root>
  Unstyled
</amplify-strike>
`;

exports[`amplify-strike stories withText 1`] = `
<amplify-strike class="amplify-ui--strike css-1ket5td">
  <mock:shadow-root>
    <span class="amplify-ui--strike css-15gu3cp">
      <slot></slot>
    </span>
  </mock:shadow-root>
  or
</amplify-strike>
`;
